specified max height on user cards to prevent row wrapping issues

--- a/src/components/directives/userCard.less
+++ b/src/components/directives/userCard.less
@@ -12,6 +12,8 @@
   border-radius: @border-radius-large;
   background-color: #EFEFEF;
   display: block;
+  max-height: 247px !important;
+  overflow: hidden;
   .user-avatar {
     cursor: pointer;
     margin-right: -(@contentPadding);
@@ -60,6 +62,7 @@
     margin-left: -(@contentPadding);
     padding: 0;
     padding-top: @contentPadding/3;
+    overflow: hidden;
     ul {
       padding: 0;
       margin:0;
@@ -100,7 +103,7 @@
         color: #999;
       }
       .attr-value {
-
+        font-size: small;
       }
     }
   }
